<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_results_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- id was @+id/general_results_list -->

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Cancel" />

        <Button
            android:id="@+id/btnFarmerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFarmerInfo" />
         
         <Button
            android:id="@+id/btnAddFarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAddFarm" />

         <Button
             android:id="@+id/btnResetLocalDB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lblResetLocalDB" />

    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCheckAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCheckAll" />

        <Button
            android:id="@+id/btnClearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblClearAll" />
        
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSave" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDelete" />
        
    </LinearLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

  


        
</LinearLayout>