<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtAddFarmSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAddFarmSeason"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtCropType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCropType"
            android:textAppearance="?android:attr/textAppearanceMedium" />
<Spinner
        android:id="@+id/spnCropType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSeason"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spnSeason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtSeedVariety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSeedVariety"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spnSeedVariety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtLandOwnership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLandOwnership"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spnLandOwnership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtMechanized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMechanizationType"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rdgMechanized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rdManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lblManual" />

        <RadioButton
            android:id="@+id/rdMechanized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblMechanized" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtDemoPlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDemoPlotType"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rdgDemoPlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rdRegularFarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lblRegularFarm" />

        <RadioButton
            android:id="@+id/rdDemoPlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDemoPlot" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtFarmSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFarmSize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtFarmSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSubmit" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Cancel" />
    </LinearLayout>

    </LinearLayout>

</ScrollView>