<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBasicSearch"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rdgSearchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rdFarmerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lblFarmerName" />

        <RadioButton
            android:id="@+id/rdFarmerReferenceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFarmerReferenceNo" />

      
    </RadioGroup>

    <EditText
        android:id="@+id/edtSearchString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSubmit" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Cancel" />

    </LinearLayout>

</LinearLayout>